[tool.poetry]
name = "flask_example"
version = "0.1.0"
description = ""
authors = ["contatodopaulo <contatodopaulo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^1.1.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
flake8 = "^3.9.0"
black = "^20.8b1"
isort = "^5.8.0"
safety = "^1.10.3"
bandit = "^1.7.0"
pre-commit = "^2.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
